k8s/emailservice/email-messaging.yaml
apiVersion: v1
kind: Service
metadata:
  name: maildev
spec:
  selector:
    app: maildev
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
---
apiVersion: v1
kind: Service
metadata:
  name: maildev-web
spec:
  type: NodePort
  selector:
    app: maildev
  ports:
    - name: web
      port: 1080
      targetPort: 1080
      nodePort: 30180
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maildev
  template:
    metadata:
      labels:
        app: maildev
    spec:
      containers:
        - name: maildev
          image: maildev/maildev@sha256:272239339ccda09531014608436367c26d8ee645e0b17952dd00601050d0340a
          ports:
            - containerPort: 1025
            - containerPort: 1080
---
apiVersion: v1
kind: Service
metadata:
  name: email-zookeeper
spec:
  selector:
    app: email-zookeeper
  ports:
    - port: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-zookeeper
  template:
    metadata:
      labels:
        app: email-zookeeper
    spec:
      containers:
        - name: email-zookeeper
          image: confluentinc/cp-zookeeper:7.6.0@sha256:9babd1c0beaf93189982bdbb9fe4bf194a2730298b640c057817746c19838866
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: email-kafka
spec:
  selector:
    app: email-kafka
  ports:
    - port: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-kafka
  template:
    metadata:
      labels:
        app: email-kafka
    spec:
      containers:
        - name: email-kafka
          image: confluentinc/cp-kafka:7.6.0@sha256:24cdd3a7fa89d2bed150560ebea81ff1943badfa61e51d66bb541a6b0d7fb047
          ports:
            - containerPort: 9092
